--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,30 @@
+ul {
+  display: flex;
+  flex-direction: row;
+}
+li {
+  margin: 0 20px;
+}
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+
+.item-container {
+  height: 300px;
+  width: 200px;
+  margin: 0 auto;
+  background: rgb(68, 109, 105);
+  box-sizing: border-box;
+  padding: 10px 20px;
+}
+
+button {
+  position: relative;
+  bottom: 10%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
